getValidScriptsThrowsExeption test done